<resources>
    <string name="app_name">RecipeBox</string>
    <string name="app_icon">app icon</string>
    <string name="recipe_box">Recipe Box</string>
    <string name="sign_in_sign_up">Sign In / Sign Up</string>
    <string name="client_id">442654926282-qfq7kk2642n3s0dbd3sui7r308sa7q66.apps.googleusercontent.com</string>
    <string name="NoAccount">No google account chosen</string>
    <string name="ok">Ok</string>
    <string name="my_recipes">My Recipes</string>
    <string name="explore">Explore</string>
    <string name="logout">Logout</string>
    <string name="profile_img">profile img</string>
    <string name="hello_s">Hello, %s!</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="logo">logo</string>
    <string name="add_recipe">add recipe</string>
    <string name="no_recipes_available">No recipes available</string>
    <string name="recipe_image">recipe image</string>
    <string name="cancel">Cancel</string>
    <string name="take_an_image">take image</string>
    <string name="ingredients_comma_separated">Ingredients (comma separated)</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="save">add</string>
    <string name="instructions">Instructions (each step on a new line)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>